# shrinkwraprs

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
examples/: generics.rs  mapping.rs  structs.rs
src/: ast.rs  lib.rs  visibility.rs
tests/: impl_immut.rs  impl_mut.rs  mapping.rs
