[package]

name = "shrinkwraprs"
version = "0.0.1"
authors = [ "William Yao <williamyaoh@gmail.com>" ]
description = "Auto-derive conversion traits"

[dependencies]

syn = { version = "0.12.10", features = [ "default", "extra-traits" ] }
quote = "0.4.2"
itertools = "0.7.6"
proc-macro2 = "0.2.2"

[lib]

proc-macro = true