[package]

name = "shrinkwraprs"
version = "0.0.1"
authors = [ "William Yao <williamyaoh@gmail.com>" ]
description = "Auto-derive conversion traits"

[dependencies]

syn = { version = "0.12.10", features = [ "default", "extra-traits" ] }
quote = "0.4.2"
itertools = "0.7.6"

[lib]

proc-macro = true

[features]

# Forces crate to compile cleanly. Mostly used for CI; build must pass with this
# feature to be merged in.
strict = []