[package]

name = "shrinkwraprs"
version = "0.1.1"
authors = [ "William Yao <williamyaoh@gmail.com>" ]
description = "Auto-derive for Rust conversion traits -- make working with newtypes a breeze"
documentation = "https://docs.rs/shrinkwraprs"
repository = "https://gitlab.com/williamyaoh/shrinkwraprs"
readme = "README.md"
license = "BSD-3-Clause"

keywords = [ "conversion", "convert", "newtype" ]
categories = [ "rust-patterns", "development-tools" ]

[dependencies]

syn = { version = "0.12.10", features = [ "default", "extra-traits" ] }
quote = "0.4.2"
itertools = "0.7.6"

[lib]

proc-macro = true

[features]

# Forces crate to compile cleanly. Mostly used for CI; build must pass with this
# feature to be merged in.
strict = []